Fixed sidebar css to make it clickable on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -167,6 +167,7 @@ float: right;
      width: 100%;
      height: auto;
      position: relative;
+     float: unset;
    }
 
    .sidebar a {float: left;}
